设置sentry的zookeeper clickhouse pvc大小为30G

--- a/cluster/220-software-development/sentry/helm-release.yaml
+++ b/cluster/220-software-development/sentry/helm-release.yaml
@@ -27,6 +27,10 @@ spec:
     redis:
       replica:
         replicaCount: 1
+    zookeeper:
+      persistence:
+        dataLogDir:
+          size: 30Gi
     system:
       adminEmail: "${SECRET_SENTRY_ADMIN_EMAIL}"
       url: "https://sentry.${SECRET_DOMAIN}"
