设置sentry的zookeeper clickhouse pvc大小为30G

--- a/cluster/220-software-development/sentry/helm-release.yaml
+++ b/cluster/220-software-development/sentry/helm-release.yaml
@@ -31,6 +31,7 @@ spec:
       persistence:
         dataLogDir:
           size: 30Gi
+        size: 30Gi
     system:
       adminEmail: "${SECRET_SENTRY_ADMIN_EMAIL}"
       url: "https://sentry.${SECRET_DOMAIN}"
