--- a/cluster/220-software-development/sentry/ingress-patch.yaml
+++ b/cluster/220-software-development/sentry/ingress-patch.yaml
@@ -6,9 +6,8 @@ metadata:
   namespace: sentry
   annotations:
     kubernetes.io/ingress.class: "traefik"
-    kubernetes.io/tls-acme: "true"
 spec:
   tls:
     - hosts:
         - "sentry.${SECRET_DOMAIN}"
-      secretName: sentry-tls
+      secretName: "${SECRET_DOMAIN/./-}-tls"
