设置sentry的web在更新时重新创建，并显式指定web的副本数为1

--- a/cluster/220-software-development/sentry/helm-release.yaml
+++ b/cluster/220-software-development/sentry/helm-release.yaml
@@ -27,6 +27,10 @@ spec:
       create: true
       email: "${SECRET_SENTRY_ADMIN_EMAIL}"
       password: "${SECRET_SENTRY_ADMIN_PASSWORD}"
+    sentry:
+      web:
+        replicas: 1
+        strategyType: Recreate
     redis:
       replica:
         replicaCount: 1
