--- a/cluster/260-game-server/minecraft/mc-eternal/kustomization.yaml
+++ b/cluster/260-game-server/minecraft/mc-eternal/kustomization.yaml
@@ -2,8 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - base
-  - mc-router
-  - all-the-mods-8
-  - mine-space
-  - mc-eternal
+  - helm-release.yaml
