更新minecraft-scripts中修改server.properties的脚本，显式指定生存模式

--- a/cluster/260-game-server/minecraft/base/minecraft-scripts.yaml
+++ b/cluster/260-game-server/minecraft/base/minecraft-scripts.yaml
@@ -34,6 +34,7 @@ data:
       "max-players=66666"
       "online-mode=true"
       "enable-rcon=true"
+      "gamemode=survival"
       "difficulty=hard"
       "white-list=false"
       "level-name=world"
