--- a/cluster/260-game-server/minecraft/all-the-mods-8/helm-release.yaml
+++ b/cluster/260-game-server/minecraft/all-the-mods-8/helm-release.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       # renovate: registryUrl=https://bjw-s.github.io/helm-charts
       chart: app-template
-      version: 1.5.0
+      version: 1.5.1
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -24,23 +24,43 @@ spec:
       repository: itzg/minecraft-server
       tag: java17
 
-    podSecurityContext:
-      runAsUser: 1000
-      runAsGroup: 1000
-      fsGroup: 1000
-      fsGroupChangePolicy: OnRootMismatch
-
-    env:
-      TZ: "Asia/Shanghai"
-
     command: [ "/bin/bash", "-c" ]
-    args: [ "cd /minecraft && echo eula=true > eula.txt && bash /scripts/server_properties_update.sh && chmod +x ./startserver.sh && ./startserver.sh" ]
+    args:
+      - |
+        cd /minecraft && \
+        bash ./startserver.sh
+
     resources:
       requests:
         cpu: 10m
         memory: 8Gi
       limits:
         memory: 9Gi
+
+    podSecurityContext:
+      runAsUser: 1000
+      runAsGroup: 1000
+      fsGroup: 1000
+
+    initContainers:
+      chown-files:
+        image: ubuntu:22.04
+        command: [ "bash", "-c" ]
+        args:
+          - |
+            cd /minecraft && \
+            bash /scripts/init.sh
+        volumeMounts:
+          - name: minecraft-data
+            mountPath: /minecraft
+            subPath: all-the-mods-8
+            mountPropagation: HostToContainer
+          - name: minecraft-scripts
+            readOnly: true
+            mountPath: /scripts
+
+    env:
+      TZ: "Asia/Shanghai"
 
     probes:
       liveness:
@@ -107,4 +127,3 @@ spec:
 
     strategy:
       type: Recreate
-
