添加minecraft gear-carol整合包服务端 https://www.mcmod.cn/modpack/557.html

--- a/cluster/260-game-server/minecraft/kustomization.yaml
+++ b/cluster/260-game-server/minecraft/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - divine-journey
   - all-the-mods-8
   - evolution-of-the-ages-2
+  - gear-carol
   - stellaris-craft
   - mine-space
   - mc-eternal
