--- a/cluster/260-game-server/minecraft/kustomization.yaml
+++ b/cluster/260-game-server/minecraft/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - base
+  - rlcraft
   - dawn-craft
   - rad2
   - divine-journey
