更新minecraft-scripts中修改server.properties的脚本，显式设置开启命令方块

--- a/cluster/260-game-server/minecraft/base/minecraft-scripts.yaml
+++ b/cluster/260-game-server/minecraft/base/minecraft-scripts.yaml
@@ -39,6 +39,7 @@ data:
       "white-list=false"
       "level-name=world"
       "max-tick-time=60000"
+      "enable-command-block=true"
     )
 
     for property in "$${properties[@]}"; do
