添加minecraft unity-craft整合包服务端 https://www.mcmod.cn/modpack/394.html

--- a/cluster/260-game-server/minecraft/kustomization.yaml
+++ b/cluster/260-game-server/minecraft/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - base
   - unity-craft
+  - tinkers-heartwork-and-deities
   - ftb-ocean-block
   - rlcraft
   - better-minecraft
