添加minecraft the-winter-frontier整合包服务端 https://www.mcmod.cn/modpack/591.html

--- a/cluster/260-game-server/minecraft/kustomization.yaml
+++ b/cluster/260-game-server/minecraft/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - base
   - unity-craft
   - tinkers-heartwork-and-deities
+  - the-winter-frontier
   - ftb-ocean-block
   - rlcraft
   - better-minecraft
