统一调整minecraft服务器的初始化容器名

--- a/cluster/260-game-server/minecraft/evolution-of-the-ages-2/helm-release.yaml
+++ b/cluster/260-game-server/minecraft/evolution-of-the-ages-2/helm-release.yaml
@@ -44,7 +44,7 @@ spec:
       fsGroup: 1000
 
     initContainers:
-      chown-files:
+      init:
         image: ubuntu:22.04
         command: [ "bash", "-c" ]
         args:
