--- a/cluster/260-game-server/minecraft/rlcraft/helm-release.yaml
+++ b/cluster/260-game-server/minecraft/rlcraft/helm-release.yaml
@@ -43,7 +43,7 @@ spec:
       fsGroup: 1000
 
     initContainers:
-      chown-files:
+      init:
         image: ubuntu:22.04
         command: [ "bash", "-c" ]
         args:
