--- a/cluster/220-software-development/sentry/helm-release.yaml
+++ b/cluster/220-software-development/sentry/helm-release.yaml
@@ -44,6 +44,11 @@ spec:
     ingress:
       enabled: true
       regexPathStyle: traefik
+      annotations:
+        kubernetes.io/ingress.class: "traefik"
+      hostname: "sentry.${SECRET_DOMAIN}"
+      tls:
+        - secretName: "${SECRET_DOMAIN/./-}-tls"
     config:
       # https://github.com/sentry-kubernetes/charts/issues/414
       sentryConfPy: |
