--- a/cluster/220-software-development/sentry/helm-release.yaml
+++ b/cluster/220-software-development/sentry/helm-release.yaml
@@ -34,6 +34,11 @@ spec:
     redis:
       replica:
         replicaCount: 1
+    kafka:
+      zookeeper:
+        enabled: false
+      kraft:
+        enabled: true
     zookeeper:
       persistence:
         dataLogDir:
