替换metallb的指定IP设置为kube-vip的

--- a/cluster/001-infrastructure/traefik/helm-release.yaml
+++ b/cluster/001-infrastructure/traefik/helm-release.yaml
@@ -44,7 +44,7 @@ spec:
       enabled: true
       type: LoadBalancer
       annotations:
-        metallb.universe.tf/loadBalancerIPs: 192.168.254.1
+        kube-vip.io/loadbalancerIPs: 192.168.254.1
       spec:
         externalTrafficPolicy: Local
     ports:
