--- a/cluster/200-storage-service/resilio-sync/helm-release.yaml
+++ b/cluster/200-storage-service/resilio-sync/helm-release.yaml
@@ -39,7 +39,7 @@ spec:
         type: LoadBalancer
         externalTrafficPolicy: Local
         annotations:
-          metallb.universe.tf/loadBalancerIPs: 192.168.254.100
+          kube-vip.io/loadbalancerIPs: 192.168.254.100
         ports:
           http:
             enabled: true
