--- a/cluster/230-media-service/plex/helm-release.yaml
+++ b/cluster/230-media-service/plex/helm-release.yaml
@@ -38,7 +38,7 @@ spec:
         type: LoadBalancer
         externalTrafficPolicy: Local
         #        annotations:
-        #          metallb.universe.tf/loadBalancerIPs: ""
+        #          kube-vip.io/loadbalancerIPs: ""
         ports:
           http:
             enabled: true
