--- a/cluster/260-game-server/minecraft/base/mc-router/k8s-example-auto.yaml
+++ b/cluster/260-game-server/minecraft/base/mc-router/k8s-example-auto.yaml
@@ -36,7 +36,7 @@ metadata:
   name: mc-router
   namespace: game-server
   annotations:
-    metallb.universe.tf/loadBalancerIPs: 192.168.254.7
+    kube-vip.io/loadbalancerIPs: 192.168.254.7
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
