--- a/cluster/260-game-server/minecraft/base/samba/helm-release.yaml
+++ b/cluster/260-game-server/minecraft/base/samba/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
         type: LoadBalancer
         externalTrafficPolicy: Local
         annotations:
-          metallb.universe.tf/loadBalancerIPs: 192.168.254.6
+          kube-vip.io/loadbalancerIPs: 192.168.254.6
         ports:
           http:
             enabled: false
