--- a/cluster/100-virtual-machine-base/kubevirt-cdi/cdi-uploadproxy-loadbalancer.yaml
+++ b/cluster/100-virtual-machine-base/kubevirt-cdi/cdi-uploadproxy-loadbalancer.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cdi-uploadproxy-loadbalancer
   namespace: cdi
   annotations:
-    metallb.universe.tf/loadBalancerIPs: 192.168.254.2
+    kube-vip.io/loadbalancerIPs: 192.168.254.2
 spec:
   ports:
     - protocol: TCP
