--- a/cluster/230-media-service/qbittorrent/helm-release.yaml
+++ b/cluster/230-media-service/qbittorrent/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
         type: LoadBalancer
         externalTrafficPolicy: Local
         annotations:
-          metallb.universe.tf/loadBalancerIPs: 192.168.254.101
+          kube-vip.io/loadbalancerIPs: 192.168.254.101
         ports:
           http:
             enabled: true
