--- a/cluster/230-media-service/samba/helm-release.yaml
+++ b/cluster/230-media-service/samba/helm-release.yaml
@@ -33,7 +33,7 @@ spec:
         type: LoadBalancer
         externalTrafficPolicy: Local
         annotations:
-          metallb.universe.tf/loadBalancerIPs: 192.168.254.4
+          kube-vip.io/loadbalancerIPs: 192.168.254.4
         ports:
           http:
             enabled: false
