移除metallb，使用kube-vip替换

--- a/cluster/000-base/namespaces_infrastructure/kustomization.yaml
+++ b/cluster/000-base/namespaces_infrastructure/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - cert-manager.yaml
   - gpu-operator.yaml
   - kube-system.yaml
-  - metallb-system.yaml
+#  - metallb-system.yaml
   - rook-ceph.yaml
