--- a/cluster/001-infrastructure/kilo/kilo-kubeadm-cilium.yaml
+++ b/cluster/001-infrastructure/kilo/kilo-kubeadm-cilium.yaml
@@ -77,7 +77,8 @@ spec:
             # additional and also optional flag
             - --log-level=all
             - --encapsulate=never
-            - --mesh-granularity=full
+            - --clean-up-interface=true
+          #            - --mesh-granularity=full
           env:
             - name: NODE_NAME
               valueFrom:
