--- a/cluster/001-infrastructure/kilo/kilo-kubeadm-cilium.yaml
+++ b/cluster/001-infrastructure/kilo/kilo-kubeadm-cilium.yaml
@@ -78,6 +78,7 @@ spec:
             - --log-level=all
             - --encapsulate=never
             - --clean-up-interface=true
+            - --mesh-granularity=full
           env:
             - name: NODE_NAME
               valueFrom:
