给traefik加上节点选择限制

--- a/cluster/001-infrastructure/traefik/helm-release.yaml
+++ b/cluster/001-infrastructure/traefik/helm-release.yaml
@@ -32,6 +32,10 @@ spec:
       kind: DaemonSet
     tolerations:
       - operator: Exists
+    nodeSelector:
+      location: "home"
+      kubernetes.io/arch: "amd64"
+      kubernetes.io/os: "linux"
     ingressClass:
       enabled: true
       isDefaultClass: true
