--- a/cluster/260-game-server/minecraft/kustomization.yaml
+++ b/cluster/260-game-server/minecraft/kustomization.yaml
@@ -4,22 +4,22 @@ kind: Kustomization
 resources:
   - base
   - gregtech-new-horizons
-  - mianmian-craft
-  - naturalism
-  - unity-craft
-  - tinkers-heartwork-and-deities
-  - the-winter-frontier
-  - ftb-ocean-block
-  - rlcraft
-  - better-minecraft
-  - dawn-craft
-  - infinity
-  - rad2
-  - divine-journey
-  - all-the-mods-8
-  - evolution-of-the-ages-2
-  - gear-carol
-  - stellaris-craft
-  - mine-space
+  #  - mianmian-craft
+  #  - naturalism
+  #  - unity-craft
+  #  - tinkers-heartwork-and-deities
+  #  - the-winter-frontier
+  #  - ftb-ocean-block
+  #  - rlcraft
+  #  - better-minecraft
+  #  - dawn-craft
+  #  - infinity
+  #  - rad2
+  #  - divine-journey
+  #  - all-the-mods-8
+  #  - evolution-of-the-ages-2
+  #  - gear-carol
+  #  - stellaris-craft
+  #  - mine-space
   - mc-eternal
   - pseudos-sandbox
